# stm32f4_test

./: README.md
adc_01/: Cargo.toml
adc_01/src/: main.rs
adc_02/: README.md
adc_02/src/: main.rs
adc_03/: Cargo.toml  Embed.toml  README.md
adc_03/.cargo/: config.toml
adc_03/src/: main.rs  main.rs_backup1  main.rs_backup2  main.rs_backup3  main.rs_backup4  main.rs_backup5  main.txt
blink_01/: Cargo.toml  README.md
blink_01/src/: main.rs
blink_02/: Cargo.toml  README.md
blink_02/src/: main.rs
blink_03/: Cargo.toml  README.md
blink_03/src/: main.rs
blink_04/: Cargo.toml  README.md
blink_04/.cargo/: config.toml
blink_04/src/: main.rs
blink_05/: Cargo.toml  README.md
blink_05/.cargo/: config.toml
blink_05/src/: main.rs
dac_01/: Cargo.toml  README.md
dac_01/src/: main.rs
dac_02/: Cargo.toml  README.md
dac_02/src/: main.rs
emb_book_01/: Cargo.toml  README.md
emb_book_01/.cargo/: config.toml
emb_book_01/tests/: integration.rs
