[package]
name = "blink_05"
version = "0.1.0"
authors = ["Srideep Chatterjee <srideep007@gmail.com>"]
edition = "2024"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "1.0"
defmt-rtt = "1.0"
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-stm32 = { version = "0.4.0", features = ["defmt", "stm32f407vg", "memory-x", "time-driver-tim4"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
panic-probe = { version = "1.0", features = ["print-defmt"] }


[profile.release]
debug = 2
